--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<script type="text/javascript" src="java.js"></script>
+	<a href="dat/index.html">Click</a>
 	<h1>Submission</h1>
 	<form action="/my-handling-form-page" method="post">
 		<ul>
