--- a/vanilla/1-color-flipper/setup/index.html
+++ b/vanilla/1-color-flipper/setup/index.html
@@ -9,8 +9,23 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>color flipper</h1>
-    <!-- javascript -->
+    <nav>
+      <div class="nav-center">
+        <h4>Color flipper</h4>
+        <ul class="nav-link">
+          <li>
+            <a href="index.html">simple</a>
+            <a href="hex.html">hex</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <main>
+      <div class="container">
+        <h2>Background Color: <span class="color">#f1f5f8</span></h2>
+        <button class="btn btn-hero" id="btn">Change</button>
+      </div>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
