--- a/vanilla/3-reviews/setup/index.html
+++ b/vanilla/3-reviews/setup/index.html
@@ -4,17 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Starter</title>
-    <!-- font-awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
-
     <!-- styles -->
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>review project</h1>
+    <main>
+      <section class="container">
+        <div class="title">
+          <h2>Reviews</h2>
+          <div class="underline"></div>
+        </div>
+        <article class="review">
+          <div class="img-container">
+            <img src="./person-1.jpeg" id="person-img" alt="">
+          </div>
+          <h4 id="author">Mr. X</h4>
+          <p id="job">Teacher</p>
+          <p id="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quae sed nihil, reprehenderit numquam dolor recusandae deserunt repellendus impedit. Nulla harum officiis tenetur deserunt voluptates architecto cupiditate repellendus cum obcaecati.</p>
+        <div class="button-container">
+          <button class="prev-btn">
+            <i class="fas fa-chevron-left"></i>
+          </button>
+          <button class="next-btn">
+            <i class="fas fa-chevron-right"></i>
+          </button>
+        </div>
+        <button class="random-btn">surprise</button>
+      </article>
+    </section>
+    </main>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
