--- a/vanilla/8-menu/setup/index.html
+++ b/vanilla/8-menu/setup/index.html
@@ -13,8 +13,26 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>menu project</h1>
-    <!-- javascript -->
+    <section class="menu">
+      <div class="title">
+        <h2>Menu</h2>
+        <div class="underline"></div>
+      </div>
+      <div class="section-center">
+        <article class="menu-item">
+          <img src="./menu-item.jpeg" class="photo" alt="menu-item">
+          <div class="item-info">
+            <header>
+              <h4>buttermilk pancakes</h4>
+              <h4 class="price">$15</h4>
+            </header>
+            <p class="item-text">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed quod et inventore, error dolore impedit a dolorum quis, ex repellendus saepe exercitationem labore ipsum animi sint ut ullam laudantium quos.
+            </p>
+          </div>
+        </article>
+      </div>
+    </section>
     <script src="app.js"></script>
   </body>
 </html>
