--- a/vanilla/7-questions/setup/index.html
+++ b/vanilla/7-questions/setup/index.html
@@ -18,8 +18,61 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>questions project</h1>
-    <!-- javascript -->
+    <section class="questions">
+      <div class="title">
+        <h2>Frequently Asked Questions</h2>
+      </div>
+      <div class="section-center">
+        <article class="question">
+          <div class="question-title">
+            <p>What we are</p>
+            <button type="button" class="question-btn">
+              <span class="plus-icon">
+                <i class="far fa-plus-square"></i>
+              </span>
+              <span class="minus-icon">
+                <i class="far fa-minus-square"></i>
+              </span>
+            </button>
+          </div>
+          <div class="question-text">
+            <p>humans</p>
+          </div>
+        </article>
+        <article class="question">
+          <div class="question-title">
+            <p>What we do</p>
+            <button type="button" class="question-btn">
+              <span class="plus-icon">
+                <i class="far fa-plus-square"></i>
+              </span>
+              <span class="minus-icon">
+                <i class="far fa-minus-square"></i>
+              </span>
+            </button>
+          </div>
+          <div class="question-text">
+            <p>Try</p>
+          </div>
+        </article>
+        <article class="question">
+          <div class="question-title">
+            <p>What we want</p>
+            <button type="button" class="question-btn">
+              <span class="plus-icon">
+                <i class="far fa-plus-square"></i>
+              </span>
+              <span class="minus-icon">
+                <i class="far fa-minus-square"></i>
+              </span>
+            </button>
+          </div>
+          <div class="question-text">
+            <p>Lots of stuff</p>
+          </div>
+        </article>
+      </div>
+    </section>
     <script src="app.js"></script>
   </body>
 </html>
