--- a/vanilla/8-menu/setup/index.html
+++ b/vanilla/8-menu/setup/index.html
@@ -18,6 +18,12 @@
         <h2>Menu</h2>
         <div class="underline"></div>
       </div>
+      <div class="btn-container">
+        <button class="filter-btn" type="button" data-cat="all">all</button>
+        <button class="filter-btn" type="button" data-cat="breakfast">breakfast</button>
+        <button class="filter-btn" type="button" data-cat="lunch">lunch</button>
+        <button class="filter-btn" type="button" data-cat="shakes">shakes</button>
+      </div>
       <div class="section-center">
         <article class="menu-item">
           <img src="./menu-item.jpeg" class="photo" alt="menu-item">
