--- a/vanilla/8-menu/setup/index.html
+++ b/vanilla/8-menu/setup/index.html
@@ -19,13 +19,13 @@
         <div class="underline"></div>
       </div>
       <div class="btn-container">
-        <button class="filter-btn" type="button" data-cat="all">all</button>
+        <!-- <button class="filter-btn" type="button" data-cat="all">all</button>
         <button class="filter-btn" type="button" data-cat="breakfast">breakfast</button>
         <button class="filter-btn" type="button" data-cat="lunch">lunch</button>
-        <button class="filter-btn" type="button" data-cat="shakes">shakes</button>
+        <button class="filter-btn" type="button" data-cat="shakes">shakes</button> -->
       </div>
       <div class="section-center">
-        <article class="menu-item">
+        <!-- <article class="menu-item">
           <img src="./menu-item.jpeg" class="photo" alt="menu-item">
           <div class="item-info">
             <header>
@@ -36,7 +36,7 @@
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed quod et inventore, error dolore impedit a dolorum quis, ex repellendus saepe exercitationem labore ipsum animi sint ut ullam laudantium quos.
             </p>
           </div>
-        </article>
+        </article> -->
       </div>
     </section>
     <script src="app.js"></script>
