--- a/vanilla/10-scroll/setup/index.html
+++ b/vanilla/10-scroll/setup/index.html
@@ -13,7 +13,71 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>scroll project</h1>
+    <header id="home">
+      <nav id="nav">
+        <div class="nav-center">
+          <div class="nav-header">
+            <img src="./logo.svg" alt="logo" class="logo">
+            <button class="nav-toggle">
+              <i class="fas fa-bars"></i>
+            </button>
+          </div>
+          <div class="links-container">
+            <ul class="links">
+              <li>
+                <a href="#home" class="scroll-link">home</a>
+              </li>
+              <li>
+                <a href="#about" class="scroll-link">about</a>
+              </li>
+              <li>
+                <a href="#services" class="scroll-link">services</a>
+              </li>
+              <li>
+                <a href="#tours" class="scroll-link">tours</a>
+              </li>
+            </ul>            
+          </div>
+        </div>
+      </nav>
+      <div class="banner">
+        <div class="container">
+          <h1>Project</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus numquam reprehenderit repellendus atque nostrum consectetur quo beatae deserunt dolore, aspernatur dolorum incidunt quisquam eveniet tenetur, placeat omnis magni ipsam facilis.
+          </p>
+          <a href="#tours" class="scroll-link btn btn-white">
+            explore tours
+          </a>
+        </div>
+      </div>
+    </header>
+    <section id="about" class="section">
+      <div class="title">
+        <h2>about <span>us</span></h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum fugit expedita quo cupiditate provident ea enim ut aut dolor quaerat vitae possimus, dolorem doloribus aliquid recusandae? Deserunt, dignissimos! Adipisci, fuga!</p>
+      </div>
+    </section>
+    <section id="services" class="section">
+      <div class="title">
+        <h2>Our <span>services</span></h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum fugit expedita quo cupiditate provident ea enim ut aut dolor quaerat vitae possimus, dolorem doloribus aliquid recusandae? Deserunt, dignissimos! Adipisci, fuga!</p>
+      </div>
+    </section>
+    <section id="tours" class="section">
+      <div class="title">
+        <h2>featured <span>tours</span></h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum fugit expedita quo cupiditate provident ea enim ut aut dolor quaerat vitae possimus, dolorem doloribus aliquid recusandae? Deserunt, dignissimos! Adipisci, fuga!</p>
+      </div>
+    </section>
+    <footer class="section">
+      <p>
+        copyright &copy; flutter co <span id="date"> </span>. all rights reserved
+      </p>
+    </footer>
+    <a href="#home" class="scroll-link top-link">
+      <i class="fas fa-arrow-up"></i>
+    </a>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
