--- a/vanilla/13-lorem-ipsum/setup/index.html
+++ b/vanilla/13-lorem-ipsum/setup/index.html
@@ -9,7 +9,15 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>lorem ipsum project</h1>
+    <section class="section-center">
+      <h3>Try</h3>
+      <form class="lorem-form">
+        <label for="amount">paragraphs:</label>
+        <input type="number" name="amount" id="amount" placeholder="5">
+        <button class="btn" type="submit">generate</button>
+      </form>
+      <article class="lorem-text"></article>
+      </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
