--- a/bus.html
+++ b/bus.html
@@ -13,7 +13,7 @@
         <div class="logo">
             <img src="./vanilla/4-navbar/setup/logo.svg" alt="logo">
         </div>
-        <button type="button" class="btn" data-typ="add">New</button>
+        <button type="button" class="btn" data-typ="add">Add New</button>
         <button type="button" class="btn" data-typ="listed">All Listed</button>
         <button type="button" class="btn" data-typ="about">About</button>
         <button class="menu">
@@ -21,14 +21,63 @@
         </button>        
     </nav>
     <main class="content">
-        <aside class="sidebar">
-            <div class="sidebar-content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus quibusdam unde odio saepe necessitatibus iusto voluptatum, totam dolorem enim perferendis tempora quasi iste suscipit, sint quis! Ea accusamus cum architecto!</div>
-        </aside>
+        <div class="sidebar">
+            <div class="cross">
+                <i class="fas fa-times"></i>
+            </div>
+            <ul class="links">
+                <li>
+                  <a href="https://www.facebook.com">
+                    <i class="fab fa-facebook"></i>
+                  </a>
+                  <span class="visit">our facebook page</span>
+                </li>
+                <li>
+                  <a href="https://www.twitter.com">
+                    <i class="fab fa-twitter"></i>
+                  </a>
+                  <span class="visit">our twitter page</span>
+                </li>
+                <li>
+                  <a href="https://www.linkedin.com">
+                    <i class="fab fa-linkedin"></i>
+                  </a>
+                  <span class="visit">our linkedin page</span>
+                </li>
+              </ul>
+            </div>
         <div id="add" class="main main-show">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates voluptatem modi porro enim facere, iure dignissimos aspernatur rerum cupiditate maxime nemo? Laudantium veniam reprehenderit perspiciatis inventore ullam, temporibus animi corrupti?
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit dolorum nisi autem tenetur cumque? Illum minus commodi vel accusantium id distinctio doloribus voluptate, beatae iusto, ab quam dolore dicta aliquam.
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis, doloremque quidem, aliquam dicta quasi quia atque molestiae labore doloribus vero impedit consequuntur beatae odio nesciunt! Perspiciatis quam animi nostrum saepe?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit necessitatibus reprehenderit temporibus doloribus in sequi omnis cum voluptatum sed sunt rem, facilis obcaecati, ipsum praesentium quos molestiae odio cupiditate recusandae!
+            <!-- current_workspace -->
+            <!-- current_workspace -->
+
+            <button class="create-new">Add +</button>
+            <div class="n">
+                <label for="fname">
+                    Product Name:
+                </label>
+                <input type="text" class="final" placeholder="Example: Samsung Galaxy J7">
+            </div>
+            <div class="n">
+                <label for="fprice">
+                    Price (in BDT):
+                </label>
+                <input type="text" class="final" placeholder="700">
+            </div>
+            <div class="n">
+                <label for="fspec">
+                    Specifications:
+                </label>
+                Yet to learn
+            </div>
+            <div class="n">
+                <label for="fdesc">
+                    Description:
+                </label>
+                <textarea placeholder="A very good phone" class="final" style="height: 20vh;"></textarea>
+            </div>
+            
+            <!-- current_workspace -->
+            <!-- current_workspace -->
         </div>
         <div id="listed" class="main">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates voluptatem modi porro enim facere, iure dignissimos aspernatur rerum cupiditate maxime nemo? Laudantium veniam reprehenderit perspiciatis inventore ullam, temporibus animi corrupti?
