--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <div class="title">
           <h2>Shop Name Xyz</h2>
         </div>
+        <div class="btn-container">
+          <button type="button" class="filter-btn" data-id=all>
+            All
+          </button>
+        </div>
         <!-- questions -->
         <div class="section-center">
           <!-- single question -->
